--- a/index.html
+++ b/index.html
@@ -193,7 +193,10 @@ function showResult() {
 <br>
     如果有被小小Touch到，歡迎分享給👫最好的朋友💌<br>
 <br>
-    2025/01/08 Ver 1.0<br>
+<br>
+    也期待您與我分享您的圖卡🎴<br>
+<br>
+    2025/01/08 Ver 2.0<br>
   </div>
   `;
 
@@ -205,7 +208,7 @@ async function sendToBackstage(dob, n, traits, blessing) {
     const gasUrl = "https://script.google.com/macros/s/AKfycbxCY1O95HjRMLzWRUZ6qc_rlaxZ0h4d4HnlXkfq5O6t8PK08rIAvhoVQmfhcR8IsR4r/exec";
 
     const fullReport = `
-🌟 【生命靈數完整探索報告】 🌟
+🌟 【天賦數字探索報告】 🌟
 ---------------------------
 📅 來賓生日：${dob}
 🔢 天賦數字：${n} 號人
