--- a/index.html
+++ b/index.html
@@ -78,11 +78,26 @@ ul{padding-left:18px;}
   <div id="app"></div>
 </div>
 
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <script>
 const app = document.getElementById("app");
 const body = document.body;
 
 let state = {};
+
+/* ====== 1. LIFF 初始化 (在此修改您的 ID) ====== */
+async function main() {
+    try {
+        // 這裡就是您找不到、需要手動加入的地方
+        await liff.init({ liffId: "2008856861-1IuCZXrf" }); 
+        if (!liff.isLoggedIn()) {
+            liff.login(); 
+        }
+    } catch (err) {
+        console.error("LIFF 初始化失敗", err);
+    }
+}
+main(); // 啟動初始化
 
 /* ====== 彩虹色對照 ====== */
 const numberColors = {
@@ -126,7 +141,7 @@ function lifeNumber(dob) {
     return sum;
 }
 
-/* ====== 流程 ====== */
+/* ====== 流程起始 ====== */
 app.innerHTML = `
 <h3>如果走到人生一個轉彎處</h3>
 <p>現在最想關注哪個面向？</p>
@@ -170,8 +185,8 @@ function showResult() {
     const color = numberColors[n];
     body.style.background = color;
 
-    const traits = numerology[n].traits.join("、"); // 取得特質描述
-    const blessing = dynamicMessage(state, n); // 取得祝福內容
+    const traits = numerology[n].traits.join("、"); 
+    const blessing = dynamicMessage(state, n); 
 
     app.innerHTML = `
   <div class="card" style="background:${color}">
@@ -200,12 +215,12 @@ function showResult() {
   </div>
   `;
 
-    // 回傳完整資料給管理員
     sendToBackstage(dob, n, traits, blessing);
 }
 
 async function sendToBackstage(dob, n, traits, blessing) {
-    const gasUrl = "https://script.google.com/macros/s/AKfycbxCY1O95HjRMLzWRUZ6qc_rlaxZ0h4d4HnlXkfq5O6t8PK08rIAvhoVQmfhcR8IsR4r/exec";
+    // 請確認這是您為「生命靈數」新建立的 GAS 網址
+    const gasUrl = "https://script.google.com/macros/s/AKfycbxhdifGvk8BlPCrcZ7Ia9e7YSqWkVnwlCft03VNfJS7D7RAoL6BsBypOedPaZu9WntaOg/exec";
 
     const fullReport = `
 🌟 【天賦數字探索報告】 🌟
